--- a/rolify_tutorial/config/database.yml
+++ b/rolify_tutorial/config/database.yml
@@ -20,6 +20,8 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
+  username: postgres
+  password: <%= ENV['ROLIFY_TUTORIAL_DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
@@ -81,5 +83,3 @@ test:
 production:
   <<: *default
   database: rolify_tutorial_production
-  username: rolify_tutorial
-  password: <%= ENV['ROLIFY_TUTORIAL_DATABASE_PASSWORD'] %>
