--- a/rolify_tutorial/Gemfile
+++ b/rolify_tutorial/Gemfile
@@ -52,3 +52,8 @@ gem 'figaro'
 gem 'bootstrap-sass'
 gem 'autoprefixer-rails'
 
+#Devise, Authoritym and Rolify
+gem 'devise'
+gem 'authority'
+gem 'rolify'
+
